fix mobile overlap of button #362. add detection of click outside to close.

--- a/klimaland-app/src/styles/main.scss
+++ b/klimaland-app/src/styles/main.scss
@@ -364,12 +364,17 @@ code {
         
         // sources box with info about data
         .sources-container { 
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            width: 50%; 
-            height: 10%;
-            z-index: 999; 
+            width:100%;
+            height: 100%;
+
+            &.open{
+                bottom: 0;
+                height: 10%;
+                position: absolute;
+                right: 0;
+                width: 50%;
+                z-index:10;
+            }
 
 
             .sources-button {
@@ -384,6 +389,7 @@ code {
                 border-width: 0.5px;
                 border-radius: 100%;
                 border-style: solid;
+                z-index:10;
     
                 .info-i {
                     font-size: 1rem;
@@ -407,7 +413,7 @@ code {
             .sources-text-container{
                 position: absolute;
                 width: 100%;
-                height: 400px;
+                height: 70vh;
                 transform: translate(-50%, -105%);
                 -webkit-transform:translate(-50%, -105%);
                 background-color: #fff;
@@ -439,7 +445,7 @@ code {
                     position: absolute;
                     overflow-y: scroll;
                     overflow-x: hidden;
-                    height: 400px;
+                    height: 70vh;
     
                     .sources-linklist{
                         & p{
@@ -492,7 +498,7 @@ code {
             bottom: 2%;
             width: 100%;
             height: 10%;
-            z-index: 999;
+            z-index: 10;
 
             .info-container-content{
                 border-color: $red;
